After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657843 - Chat and Call icons don't match in History window
Chat and Call icons don't match in History window
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Archives
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on: 657841
Blocks: 657842
 
 
Reported: 2011-08-31 17:30 UTC by Matthew Paul Thomas (mpt)
Modified: 2011-09-02 14:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (42.05 KB, image/png)
2011-08-31 17:30 UTC, Matthew Paul Thomas (mpt)
  Details
LogWindow: fix toolbar icons (1.45 KB, patch)
2011-09-01 10:21 UTC, Emilio Pozuelo Monfort
accepted-commit_after_freeze Details | Review
Use format-justify-fill everywhere (1.48 KB, patch)
2011-09-02 11:47 UTC, Emilio Pozuelo Monfort
reviewed Details | Review
LogWindow: fix toolbar icons (1.45 KB, patch)
2011-09-02 11:47 UTC, Emilio Pozuelo Monfort
reviewed Details | Review

Description Matthew Paul Thomas (mpt) 2011-08-31 17:30:31 UTC
Created attachment 195330 [details]
screenshot

Empathy 3.1.5.1, Ubuntu Ocelot

In the History window, the "Chat" and "Call" icons in the toolbar look very different from the equivalent icons in the "What" pane.

The "Chat" icon should be the same as (or at least based on) the "Text chats" icon in the "What" pane.

The "Call" icon should be the same as (or at least based on) the "Calls" icon on the "What" pane.
Comment 1 Emilio Pozuelo Monfort 2011-09-01 10:21:36 UTC
Created attachment 195374 [details] [review]
LogWindow: fix toolbar icons
Comment 2 Guillaume Desmottes 2011-09-01 13:41:19 UTC
Review of attachment 195374 [details] [review]:

++

We should ask for an UI exception before merging this. Let's do a commmon request when bug #657842 has been reviewed.
Comment 3 Guillaume Desmottes 2011-09-01 14:21:44 UTC
I asked for an UI exception.
Comment 4 Guillaume Desmottes 2011-09-02 08:14:18 UTC
Comments from http://mail.gnome.org/archives/release-team/2011-September/msg00014.html


You should use icons from the Icon Naming Specification [1] here:
 - "format-justify-fill" instead "stock_text_justify".
 - And "phone", if you do not want to use the standard "audio-input-microphone"
Comment 5 Emilio Pozuelo Monfort 2011-09-02 11:46:46 UTC
phone is not the same as start-call, and start-call is in the spec. The following patch fixes the other icon.
Comment 6 Emilio Pozuelo Monfort 2011-09-02 11:47:07 UTC
Created attachment 195471 [details] [review]
Use format-justify-fill everywhere
Comment 7 Emilio Pozuelo Monfort 2011-09-02 11:47:30 UTC
Created attachment 195472 [details] [review]
LogWindow: fix toolbar icons
Comment 8 Guillaume Desmottes 2011-09-02 12:02:29 UTC
Review of attachment 195471 [details] [review]:

++
Comment 9 Guillaume Desmottes 2011-09-02 12:02:44 UTC
Review of attachment 195472 [details] [review]:

++ (we still need approval before merging).
Comment 10 Guillaume Desmottes 2011-09-02 14:08:20 UTC
Approved; you can merge!
Comment 11 Emilio Pozuelo Monfort 2011-09-02 14:34:48 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.