Use format-justify-fill everywhere

https://bugzilla.gnome.org/show_bug.cgi?id=657843